# owlclaw-core

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.test.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  contract-gate.yml  gateway-ops-gate.yml  lint.yml  owlhub-api-deploy.yml  owlhub-build-index.yml  release.yml  test.yml
examples/: README.md  agent_runtime_flow.py  agent_tools_demo.py  basic_usage.py  hatchet_basic_task.py  hatchet_cron_task.py  hatchet_durable_sleep.py  hatchet_self_schedule.py
examples/binding-http/: mock_server.py
examples/binding-openapi-e2e/: openapi.yaml
examples/complete_workflow/: IDENTITY.md  SOUL.md  app.py  owlclaw.yaml
examples/cron/: daily_sales_report.py  governance_constraints.py  hourly_inventory.py  nightly_data_cleanup.py  weekday_morning_decision.py
examples/integrations_llm/: basic_call.py  function_calling.py  model_routing.py
examples/langchain/: basic_runnable_registration.py  decorator_registration.py  fallback_and_retry.py  tracing_with_langfuse.py  transformers.py
examples/quick_start/: IDENTITY.md  SOUL.md  app.py
examples/skill-templates/: 01-monitoring-init.md  02-analysis-init.md  03-api-render.py  04-validate-and-fix.md  05-search-and-browse.md
examples/skill_templates/: render_from_template.py  templates.example.yaml
migrations/: env.py
migrations/versions/: 001_initial.py  002_add_ledger_records.py  003_memory_entries.py  004_webhook_trigger_core.py  005_signal_trigger_state.py  006_owlhub_core_tables.py  007_skill_quality_snapshots.py  008_ledger_runtime_metadata.py  009_governance_hardening_indexes_and_webhook_idempotency_pk.py  009_webhook_auth_token_hash.py  010_quality_store_tenant_prefixed_indexes.py  011_merge_phase12_migration_heads.py  README
owlclaw/: __init__.py  app.py
owlclaw-mcp/: README.md  pyproject.toml
owlclaw-mcp/owlclaw_mcp/: __init__.py  server.py
owlclaw/agent/: __init__.py  tools.py
owlclaw/capabilities/: __init__.py  capability_matcher.py  knowledge.py  registry.py  skill_creator.py  skill_doc_extractor.py  skill_nl_parser.py  skills.py  tool_schema.py  trigger_resolver.py
owlclaw/cli/: __init__.py  agent_signal.py  api_client.py  console.py  db.py  db_backup.py  db_check.py  db_init.py  db_migrate.py  db_restore.py  db_revision.py  db_rollback.py  db_status.py  init_config.py  ledger.py  memory.py  migration.py  progress.py  release_gate.py  reload_config.py  resolver.py  scan_cli.py  skill.py  skill_create.py  skill_hub.py  skill_init.py  skill_list.py  skill_parse.py  skill_quality.py  skill_templates.py  skill_validate.py  start.py  trigger_template.py
owlclaw/config/: __init__.py  listeners.py  loader.py  manager.py  models.py
owlclaw/db/: __init__.py  base.py  engine.py  exceptions.py  session.py
owlclaw/governance/: __init__.py  approval_queue.py  ledger.py  ledger_inmemory.py  migration_gate.py  proxy.py  quality_aggregator.py  quality_detector.py  quality_store.py  risk_assessor.py  router.py  visibility.py
owlclaw/integrations/: __init__.py  hatchet.py  hatchet_acceptance.py  hatchet_cutover.py  hatchet_migration.py  langfuse.py  llm.py
owlclaw/mcp/: __init__.py  a2a.py  generated_tools.py  governance_tools.py  http_transport.py  server.py  task_tools.py
owlclaw/owlhub/: __init__.py  client.py  release_gate.py  semantic_search.py
owlclaw/security/: __init__.py  audit.py  data_masker.py  risk_gate.py  rules.py  sanitizer.py
owlclaw/templates/: __init__.py
owlclaw/tools/: __init__.py
owlclaw/triggers/: __init__.py  cron.py
owlclaw/web/: __init__.py  app.py  contracts.py  mount.py
scripts/: README.md  build_console.ps1  console-local-setup.ps1  contract_diff.py  gateway_ops_drill.py  gateway_ops_gate.py  mcp_spike_demo.py  mionyee_apscheduler_to_hatchet.py  mionyee_dual_run_replay.py  mionyee_migration_acceptance.py  mionyee_scheduler_cutover.py  owlhub_build_index.py  owlhub_generate_site.py  owlhub_release_gate.py  protocol_governance_drill.py  regression-core.ps1  regression-failure-paths.ps1  release_consistency_check.py  release_oidc_preflight.py  release_preflight.py  review_template.py  test-local.ps1  test-local.sh  test_queue_trigger.py  test_template.py  validate_examples.py  verify_cross_lang.ps1  workflow-agent-observer.ps1  workflow-supervisor-console.ps1  workflow-terminal-control-console.ps1  workflow_audit_heartbeat.py  workflow_audit_state.py  workflow_find_window.ps1  workflow_focus_window.ps1  workflow_launch_state.py  workflow_mailbox.py  workflow_objects.py  workflow_orchestrator.py  workflow_roles.py  workflow_sendkeys.ps1  (+4 more)
scripts/completions/: owlclaw.bash  (+2 more)
templates/: notify_trigger.sql  owlclaw.yaml
(+325 files in other folders)
